@@ -5,6 +5,9 @@ jsoup changelog
 
   * Bugfix: when making a HTTP POST, if the request write fails, make sure the connection is immediately cleaned up.
 
+  * Bugfix: updated the HtmlTreeParser resetInsertionMode to the current spec for supported elements
+    <https://github.com/jhy/jsoup/issues/1491>
+
   * Bugfix [Fuzz]: fixed a slow parse when a tag has thousands of null characters in it.
     <https://github.com/jhy/jsoup/issues/1580>
 
